--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
             about
         </title>
     </head>
-    <body hoooh>
+    <body >
         <p>
             this is  a line.
         </p>
