--- a/about.html
+++ b/about.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>/>
-<html>
-    <head>
-        <title>
-            about
-        </title>
-    </head>
-    <body >
-        <p>
-            this is  a line.
-        </p>
-    </body>
-</html>
+gdjtguh
