--- a/about.html
+++ b/about.html
@@ -1,1 +1,14 @@
-gdjtguh
+<!DOCTYPE html>/>
+<html>
+    <head>
+        <title>
+            about
+        </title>
+    </head>
+    <body >
+        <p>
+            this is  a line.
+            <br>
+        </p>
+    </body>
+</html>
